Change child order in BrowserView to fix tab-order issue.

Bug: 881287
Change-Id: I8378fa4c5a77e32a72c957aa5d2d8da564f18ce8
Reviewed-on: https://chromium-review.googlesource.com/1227478
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Dana Fried <dfried@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591812}
Former-commit-id: ad06a605ed9819946c82eaff760c4406387fe240